--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <!-- <div class="anphabes-home"> -->
     <!-- <app-conten-left></app-conten-left> -->
     <!-- <app-conten-center></app-conten-center> -->
-        <!-- <router-outlet></router-outlet> -->
+        <router-outlet></router-outlet>
     <!-- <app-conten-right></app-conten-right> -->
     
 <!-- </div> -->
 
 <!-- <p appHighlight>Highlight me!</p> -->
-<app-book></app-book>
+<!-- <app-book></app-book> -->
