--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,16 @@
-<!-- <div class="anphabes-home"> -->
-    <!-- <app-conten-left></app-conten-left> -->
-    <!-- <app-conten-center></app-conten-center> -->
-        <router-outlet></router-outlet>
+<div class="anphabes-home">
+    <!-- <app-conten-left></app-conten-left>
+    <app-conten-center></app-conten-center> -->
+        <!-- <router-outlet></router-outlet> -->
     <!-- <app-conten-right></app-conten-right> -->
-    
-<!-- </div> -->
+    <app-header></app-header>
+    <app-slide></app-slide>
+
+    <router-outlet></router-outlet>
+    <!-- <app-post></app-post> -->
+</div>
 
 <!-- <p appHighlight>Highlight me!</p> -->
 <!-- <app-book></app-book> -->
+
+<!-- <app-swagger></app-swagger> -->
