--- a/src/app/myhome/conten-center/conten-center.component.html
+++ b/src/app/myhome/conten-center/conten-center.component.html
@@ -1,5 +1,9 @@
 <div class="content-home__center">
   <div class="content-home__center__content">
-    
+      <div>
+        <textarea>
+          
+        </textarea>
+      </div>
   </div>
 </div>
